plugins {
    id 'java'
    id 'com.github.spotbugs' version '5.0.12'
    id 'checkstyle'
    id 'jacoco'
    id 'pmd'
    id 'org.sonarqube' version '3.4.0.2513'
    id 'io.freefair.lombok' version '6.5.1'
    id 'info.solidsoft.pitest' version '1.9.0'
}

group 'io.github.mfvanek'
version '0.7.0'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'ch.qos.logback:logback-classic:1.4.4'
    implementation 'io.github.mfvanek:pg-index-health:0.7.0'
    implementation 'org.postgresql:postgresql:42.5.0'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'org.liquibase:liquibase-core:4.17.2'
    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
    implementation enforcedPlatform('org.testcontainers:testcontainers-bom:1.17.5')
    implementation 'org.testcontainers:testcontainers'
    implementation 'org.testcontainers:postgresql'

    testImplementation enforcedPlatform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testImplementation 'org.assertj:assertj-core:3.23.1'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:4.8.0'

    pitest 'it.mulders.stryker:pit-dashboard-reporter:0.1.2'
    checkstyle 'com.thomasjensen.checkstyle.addons:checkstyle-addons:7.0.1'
}

test {
    useJUnitPlatform()
    dependsOn checkstyleMain, checkstyleTest, pmdMain, pmdTest, spotbugsMain, spotbugsTest
    maxParallelForks = 1
    finalizedBy jacocoTestReport
    finalizedBy jacocoTestCoverageVerification
}

spotbugsMain {
    reports {
        html.enabled = true
    }
}
spotbugsTest {
    reports {
        html.enabled = true
    }
}
spotbugs {
    showProgress = true
    effort = 'max'
    reportLevel = 'low'
    excludeFilter = file("config/spotbugs/exclude.xml")
}

checkstyle {
    toolVersion '10.3.3'
    configFile file("config/checkstyle/checkstyle.xml")
    ignoreFailures = false
    maxWarnings = 0
    maxErrors = 0
}
checkstyleMain {
    source ='src/main/java'
}
checkstyleTest {
    source ='src/test/java'
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
    }
}
jacocoTestCoverageVerification {
    dependsOn test
    violationRules {
        rule {
            limit {
                counter = 'CLASS'
                value = 'MISSEDCOUNT'
                maximum = 0
            }
        }
        rule {
            limit {
                counter = 'METHOD'
                value = 'MISSEDCOUNT'
                maximum = 0
            }
        }
        rule {
            limit {
                counter = 'LINE'
                value = 'MISSEDCOUNT'
                maximum = 1
            }
        }
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.94
            }
        }
    }
}

check.dependsOn jacocoTestReport, jacocoTestCoverageVerification

pmd {
    consoleOutput = true
    toolVersion = "6.49.0"
    ruleSetFiles = files("config/pmd/pmd.xml")
    ruleSets = []
}

sonarqube {
    properties {
        property "sonar.projectKey", "mfvanek_pg-index-health-demo"
        property "sonar.organization", "mfvanek"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

pitest {
    junit5PluginVersion = '1.1.0'
    pitestVersion = '1.9.8'
    threads = 4
    outputFormats = System.getenv('STRYKER_DASHBOARD_API_KEY') != null ? ['stryker-dashboard'] : ['HTML']
    timestampedReports = false
    mutationThreshold = 100
    excludedClasses = ['io.github.mfvanek.pg.index.health.demo.utils.PostgreSqlContainerWrapper']
}

tasks.named('pitest').configure {
    mustRunAfter test
}
build.dependsOn 'pitest'
